--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -45,7 +45,63 @@
     height: auto;
 }
 
-.nav-items:hover {
+ul{
+    display: flex;
+    align-items: center;
+    margin:0;
+    padding:0;
+}
+ul > li{
+    list-style:none;
+    margin:0 20px;
+    transition:0.5s;
+  }
+
+  ul > li > a{
+    display: block;
+    position:relative;
+    text-decoration:none;
+    padding:5px;
+    font-size:16px;
+    color: #BFA181;
+    transition:0.5s;
+  }
+
+  ul:hover li a{
+    transform:scale(1.5);
+    opacity:0.2;
+    filter:blur(3px);
+  }
+
+  ul li a:hover{
+    transform:scale(1.3);
+    opacity:1;
+    filter:blur(0);
+    text-decoration:none;
+    color: #BFA181;
+  }
+
+  ul li a:before{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: transparent;
+    transition:0.5s;
+    transform-origin:left;
+    transform:scaleX(0);
+    z-index:-1;
+  }
+  
+  ul li a:hover:before{
+    transition:transform 0.5s;
+    transform-origin:left;
+    transform:scaleX(1);
+  }
+
+/* .nav-items:hover {
     color: #BFA181 !important;
     text-shadow: 0px 2px 0px #BFA181;
-}
+} */
