--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -61,3 +61,48 @@ small{
     text-size: 0.1rem;
     color: #616161;
 }
+
+.about-mobile{
+  color: white;
+}
+
+@media (max-width : 776px) {
+  .term-mobile{
+    display: none;
+  }
+}
+
+/** for the mobile view, we have different about me section !! **/
+
+.about-mobile{
+  display: flex;
+  flex-direction: column;
+}
+
+.h-mobile{
+  color: #BFA181;
+}
+
+.para-mobile{
+  color: white;
+  font-size: 0.8rem;
+}
+
+.prof_mobile{
+  font-size: 0.5rem;
+  color: #BFA181;
+}
+
+.sub-hed-mobile{
+  font-size: 0.7rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+
+/* uno reverse */ 
+@media (min-width : 776px){
+  .about-mobile{
+    display: none;
+  }
+}
